--- a/src/epl-business-plan-manager/public/css/jquery.steps.css
+++ b/src/epl-business-plan-manager/public/css/jquery.steps.css
@@ -103,7 +103,7 @@
     background:                        #eee;
     display:                           block;
     margin:                            0.5em;
-    height:                            300px;
+    height:                            310px;
     width:                             778px;
     position:                          relative;
     -webkit-border-radius:             5px;
